add w7drawing blog

--- a/markdown/20220407.md
+++ b/markdown/20220407.md
@@ -1,5 +1,5 @@
 ---
-Title: W7
+Title: W7 機械手臂
 Date: 2022-04-07 13:20
 Category: Misc
 Tags: 2022SpringCD
@@ -11,5 +11,13 @@ Author: 40923210
 
 <!-- PELICAN_END_SUMMARY -->
 
- 分配作業
+ 分配作業:
+ 一組8個人，需用solvespace，onshape，以及nx
+ 分配結果:
+ solvespace:40923201，40923208，40923217
+ onshape:40923230，40923231，40923235
+ nx12:40923205，40923210
+ 
+ 下面的網址是nx12的繪圖零件檔
+ https://40923210.github.io/cd2022/downloads/drawing.mp4
 
