--- a/markdown/20220331.md
+++ b/markdown/20220331.md
@@ -1,5 +1,5 @@
 ---
-Title: 2022 Spring CD 課程
+Title: w3 nx1980
 Date: 2022-03-31 13:20
 Category: Misc
 Tags: w3 nx1980
@@ -10,3 +10,4 @@ Author: 40923210
 2022-Spring-CD
 
 <!-- PELICAN_END_SUMMARY -->
+指定任務:有 38 個比較接近 NX1980 版本功能的教學影片，以 Wink 影片互相對照的方式採 NX1980 執行操作進行整理，完成後將所負責的 Wink 教學影片嵌入個人與大分組的 w3 中。
