--- a/markdown/20220512.md
+++ b/markdown/20220512.md
@@ -10,7 +10,8 @@ Author: 40923210
 2022-Spring-CD 
 
 <!-- PELICAN_END_SUMMARY -->
-各分組在執行 w8 任務[https://mde.tw/cd2022_guide/content/w8%20%E4%BB%BB%E5%8B%99.html] 之後, 請回答下列問題:
+各分組在執行 [w8 任務]之後, 請回答下列問題:
+[w8 任務]:https://mde.tw/cd2022_guide/content/w8%20%E4%BB%BB%E5%8B%99.html
 
 cd2022_uarm_nx12_imported.7z 中, 若計入重複引用的零件, 總數有多少? 請列出組成此一 uarm 機械手臂所需的 BOM 列表.
 若不計入重複引用的零件, 總數有多少? 請列出各零件名稱.
