--- a/markdown/20220402.md
+++ b/markdown/20220402.md
@@ -12,6 +12,7 @@ Author: 40923210
 <!-- PELICAN_END_SUMMARY -->
 建立個人blog
 -----------
+<script>// <![CDATA[
 var winkVideoData = {
   dataVersion: 1,
   frameRate: 20,
